<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LockActivity"
	android:orientation="vertical"
	android:background="@color/primary"
	android:gravity="center">

	<ImageView
		android:layout_width="80dp"
		android:layout_height="80dp"
		android:contentDescription="@string/logo"
		app:srcCompat="@drawable/logo" />

	<TextView
		android:textColor="@color/white"
		android:fontFamily="@font/product_sans_bold"
		android:textSize="@dimen/text_size_title_big"
		android:layout_marginTop="@dimen/margin_14"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_name" />

	<TextView
		android:textColor="@color/white"
		android:textSize="@dimen/text_size"
		android:layout_marginStart="@dimen/margin_48"
		android:layout_marginEnd="@dimen/margin_48"
		android:layout_marginTop="@dimen/margin_48"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/lock_message" />

</LinearLayout>