<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background_container"
	tools:context=".AuthActivity"
	android:orientation="vertical"
	android:gravity="center">

	<ImageView
		android:layout_width="80dp"
		android:layout_height="80dp"
		android:contentDescription="@string/logo_desc"
		app:srcCompat="@drawable/logo"
		app:tint="@color/primary_logo" />

	<TextView
		android:textColor="@color/primary_logo"
		android:fontFamily="@font/product_sans_bold"
		android:textSize="@dimen/text_size_title_big"
		android:layout_marginTop="@dimen/margin_14"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_name" />

	<TextView
		android:textColor="@color/text"
		android:textSize="@dimen/text_size"
		android:layout_margin="@dimen/margin_48"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/app_description" />

	<TextView
		style="@style/Button"
		android:id="@+id/auth_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/start" />
</LinearLayout>