<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/date_container"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/margin_24"
        android:paddingBottom="@dimen/margin_24">

        <View
            android:id="@+id/date_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider"/>

        <TextView
            android:id="@+id/date"
            android:layout_marginTop="@dimen/margin_14"
            android:textSize="@dimen/text_size"
            android:textColor="@color/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:background="@color/primary"
        android:id="@+id/welcome_container"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_14">

        <ImageView
            android:layout_marginEnd="@dimen/margin_14"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />

        <TextView
            android:text="@string/app_description"
            android:id="@+id/welcome"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/main_container"
        android:paddingEnd="@dimen/margin_14"
        android:paddingStart="@dimen/margin_14"
        android:paddingBottom="@dimen/margin_14">

        <LinearLayout
            android:id="@+id/meta_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="2dp">

            <ImageView
                android:visibility="gone"
                android:background="@color/background"
                android:id="@+id/icon"
                android:contentDescription="@string/icon"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginEnd="@dimen/margin_8"
                android:scaleType="centerCrop"/>

            <TextView
                android:text="@string/text"
                android:visibility="gone"
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/game_bold"
                android:textColor="@color/text"
                android:textSize="@dimen/text_size_username"/>

            <com.romainpiel.shimmer.ShimmerTextView
                style="@style/GoldenAdapter"
                android:textSize="@dimen/text_size_username"
                android:visibility="gone"
                android:id="@+id/golden_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:reflectionColor="@color/gold_highlight"/>

            <com.romainpiel.shimmer.ShimmerTextView
                style="@style/EpicAdapter"
                android:textSize="@dimen/text_size_username"
                android:visibility="gone"
                android:id="@+id/epic_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:reflectionColor="@color/epic_highlight"/>

            <TextView
                android:textSize="@dimen/text_size_username"
                android:textColor="@color/hint"
                android:layout_marginStart="@dimen/margin_8"
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>
</LinearLayout>